credential_workflow.log
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
  File "/home/neeraj/Desktop/APIAutomation/credential_workflow.py", line 1
    chmod +x cred.py
             ^^^^
SyntaxError: invalid syntax
